refactor(post): remove PostPort and stabilize PostStorePort adapter structure